--- a/Whitelist/src/config.yml
+++ b/Whitelist/src/config.yml
@@ -1,7 +1,7 @@
 enableMessage: '&9[Whitelist] Whitelist has loaded!'
 permissionMessage: '&cYou do not have permissions!'
 reloadMessage: '&9Reloaded Whitelist.'
-usageMessage: '&9Usage /wl [on | off | reload | save | add | remove | list]'
+usageMessage: '&9Usage /wl [on | off | reload | add | remove | list]'
 kickMessage: '&cYou are not whitelisted.%n Please contact with an administrator.'
 
 saveMessage: '&9Saved config.'
@@ -20,4 +20,3 @@ removedFromWhitelist: '&9%player% has been removed from whitelist.'
 notInWhitelist: '&9%player% is not in whitelist.'
 
 Enabled: false
-PlayerList: []
