--- a/DiscordWhitelist/.classpath
+++ b/DiscordWhitelist/.classpath
@@ -5,7 +5,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="D:/Temporary/Projects/GitHub/Minecraft-Plugins/DiscordWhitelist/lib/JDA-4.2.1_264-withDependencies.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/JDA-4.2.1_264-withDependencies.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="../spigot.jar"/>
 	<classpathentry kind="output" path="bin"/>
