--- a/EcoBackpack/.classpath
+++ b/EcoBackpack/.classpath
@@ -7,8 +7,8 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="../spigot.jar"/>
-	<classpathentry kind="lib" path="lib/jetbrains-annotations.jar"/>
-	<classpathentry kind="lib" path="lib/eco-5.3.6.jar"/>
-	<classpathentry kind="lib" path="lib/EcoEnchants v7.4.1.jar"/>
+	<classpathentry kind="lib" path="../jetbrains-annotations.jar"/>
+	<classpathentry kind="lib" path="../eco.jar"/>
+	<classpathentry kind="lib" path="../EcoEnchants.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
