--- a/DiscordWhitelist/src/config.yml
+++ b/DiscordWhitelist/src/config.yml
@@ -4,7 +4,8 @@ guildException: '&9[DiscordWhitelist] Could not find the guild!'
 permissionMessage: '&cYou do not have permissions!'
 reloadMessage: '&9Reloaded discord whitelist.'
 usageMessage: '&9Usage /dwl [on | off | reload]'
-kickMessage: '&cYou are not whitelisted.%n Please contact with an administrator.'
+kickMessage: '&cYou are not whitelisted.'
+secondReason: '%nDiscord nickname and minecraft username should be same.%nAnd you need to have a community role.'
 
 onMessage: '&9Discord whitelist is now on.'
 alreadyOnMessage: '&9Discord whitelist is already on.'
