--- a/CustomPotions/src/plugin.yml
+++ b/CustomPotions/src/plugin.yml
@@ -3,3 +3,8 @@ name: CustomPotions
 api-version: 1.17
 version: 1.0
 author: WobbyChip
+
+commands:
+  cpotions:
+    description: Allows you to check custom potion
+    usage: "Usage: /<command>"
