--- a/SMPTweaks/.classpath
+++ b/SMPTweaks/.classpath
@@ -6,6 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="../paper.jar"/>
 	<classpathentry kind="lib" path="../spigot.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
