--- a/SMPTweaks/src/me/wobbychip/smptweaks/custom/entitylimit/config.yml
+++ b/SMPTweaks/src/me/wobbychip/smptweaks/custom/entitylimit/config.yml
@@ -1,10 +1,8 @@
 permissionMessage: '&cYou do not have permissions!'
 reloadMessage: '&9Reloaded EntityLimit.'
 usageMessage: '&9Usage /SMPTweaks entitylimit [reload]'
-tooManyEntity: '&cTo many mobs in same area: %value%.'
+tooManyEntity: 'To many mobs in same area: %value%.'
 
 limit: 100
 maximumDistance: 16
-enabled: true
-
 excludeReason: ["NATURAL", "NETHER_PORTAL", "DEFAULT"]
