--- a/SMPTweaks/.classpath
+++ b/SMPTweaks/.classpath
@@ -7,6 +7,7 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="../spigot.jar"/>
+	<classpathentry kind="lib" path="../paper.jar"/>
 	<classpathentry kind="lib" path="../ProtocolLib.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
