--- a/SMPTweaks/src/me/wobbychip/smptweaks/custom/breakablebedrock/config.yml
+++ b/SMPTweaks/src/me/wobbychip/smptweaks/custom/breakablebedrock/config.yml
@@ -1,5 +1,8 @@
-#time in idk what format (600 seconds with hand -> (600/10)*2)
-destroyTime: 120.0
+#time in idk what format, with hand 0.2 = 1 second
+destroyTime: 17280.0
 
 #should bedrock drop when broken
 shouldDrop: true
+
+#enable timer in action bar with time left and percents
+enableTimer: false
