--- a/SMPTweaks/src/me/wobbychip/smptweaks/custom/chunkloader/config.yml
+++ b/SMPTweaks/src/me/wobbychip/smptweaks/custom/chunkloader/config.yml
@@ -1,3 +1,4 @@
+# Use server view distance for chunk loading
 useServerViewDistance: true
 
 # Distance in chunks that chunkloader will load
@@ -6,3 +7,6 @@ viewDistance: 8
 # Mode that can be toggled by left-clicking chunkloader in survival mode.
 # This mode kinda is buggy and not working always, but it's supposed to anger nearby mobs.
 enableAggravator: false
+
+# Disable chunkloader highlighting
+highlighting: true
