--- a/SMPTweaks/src/me/wobbychip/smptweaks/custom/breakablebedrock/config.yml
+++ b/SMPTweaks/src/me/wobbychip/smptweaks/custom/breakablebedrock/config.yml
@@ -8,4 +8,4 @@ shouldDrop: true
 enableTimer: false
 
 #What tools can be used to obtain bedrock
-correctTools: ["DIAMOND_PICKAXE", "NETHERITE_PICKAXE"]
+correctTools: ["NETHERITE_PICKAXE"]
