--- a/SMPTweaks/src/me/wobbychip/smptweaks/custom/serverpause/config.yml
+++ b/SMPTweaks/src/me/wobbychip/smptweaks/custom/serverpause/config.yml
@@ -1,4 +1,4 @@
-# Delay in ticks before server pauses when there are no players
+# Delay in ticks before server pauses when last player leaves
 pauseDelay: 0
 
 # If false will notify when server resumed because of console commands
