https://github.com/aria1th/SpawnProofHelper

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,5 @@ TestPlugin/
 
 */build/*
 !*/build/libs
-*/build/libs/*
-!*/build/libs/*[!sources].jar
+#*/build/libs/*
+#!*/build/libs/*[!sources].jar
