--- a/SpawnProofer/gradle.properties
+++ b/SpawnProofer/gradle.properties
@@ -1,23 +1,20 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# Versions
-# Fabric: https://fabricmc.net/versions.html
-# Mod Menu: https://linkie.shedaniel.dev/
-
 # Mod Properties
-mod_version = 1.20.1
-maven_group = wobbychip.separated.spawnproofer
-archives_base_name = spawnproofer
-modmenu_version=4.0.0
+mod_version = 1.20.2
+mod_name = SpawnProofer
+maven_group = me.wobbychip.spawnproofer
 
-# Dependencies
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.9
-loader_version=0.14.21
-fabric_version=0.86.0+1.20.1
+# Mod Dependencies https://linkie.shedaniel.dev/
+modmenu_version=4.0.0
 mod_api=7.1.0
 cloth_config=11.1.106
+
+# Fabric Dependencies https://fabricmc.net/versions.html
+minecraft_version=1.20.2
+yarn_mappings=1.20.2+build.4
+loader_version=0.14.24
+fabric_version=0.90.7+1.20.2
 
 
 
