--- a/SMPTweaks/build.gradle
+++ b/SMPTweaks/build.gradle
@@ -16,15 +16,17 @@ compileJava {
 repositories {
     mavenCentral()
     mavenLocal()
-    maven { url = "https://hub.spigotmc.org/nexus/content/repositories/snapshots/" }
-    maven { url = "https://repo.papermc.io/repository/maven-public/" }
+    maven { url "https://hub.spigotmc.org/nexus/content/repositories/snapshots/" }
+    maven { url "https://repo.papermc.io/repository/maven-public/" }
     maven { url "https://repo.codemc.io/repository/nms/" }
     maven { url "https://repo.dmulloy2.net/repository/public/" }
-    maven { url = "https://oss.sonatype.org/content/groups/public/" }
+    maven { url "https://oss.sonatype.org/content/groups/public/" }
+    maven { url "https://repo.essentialsx.net/releases/" }
 }
 
 dependencies {
     compileOnly "com.comphenix.protocol:ProtocolLib:5.1.0"
+    compileOnly "net.essentialsx:EssentialsX:2.20.0"
     compileOnly "io.papermc.paper:paper-api:${project.minecraft_version}-R0.1-SNAPSHOT"
     paperweight.paperDevBundle("${project.minecraft_version}-R0.1-SNAPSHOT")
 }
