--- a/SMPTweaks/build.gradle
+++ b/SMPTweaks/build.gradle
@@ -48,6 +48,18 @@ task rebuild {
     finalizedBy build
 }
 
+sourceSets {
+    main {
+        java {
+            srcDirs = ['src/main/java']
+        }
+        resources {
+            srcDirs = ['src/main/java', 'src/main/resources']
+            exclude '**/*.java'
+        }
+    }
+}
+
 tasks {
     assemble {
         dependsOn(reobfJar)
