--- a/SMPTweaks/src/main/resources/plugin.yml
+++ b/SMPTweaks/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ api-version: 1.13
 version: 1.0
 load: STARTUP
 author: WobbyChip
-softdepend: [ ProtocolLib ]
+softdepend: [ ProtocolLib, PlaceholderAPI ]
 
 commands:
   SMPTweaks:
