--- a/SpawnProofer/gradle.properties
+++ b/SpawnProofer/gradle.properties
@@ -1,21 +1,17 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
-mod_version = 1.20.2
+mod_version = 1.20.4
 mod_name = SpawnProofer
 maven_group = me.wobbychip.spawnproofer
 
 # Mod Dependencies https://linkie.shedaniel.dev/
-modmenu_version=4.0.0
+modmenu_version=9.2.0-beta.2
 mod_api=7.1.0
-cloth_config=11.1.106
+cloth_config=13.0.121
 
 # Fabric Dependencies https://fabricmc.net/versions.html
-minecraft_version=1.20.2
-yarn_mappings=1.20.2+build.4
-loader_version=0.14.24
-fabric_version=0.90.7+1.20.2
-
-
-
-
+minecraft_version=1.20.4
+yarn_mappings=1.20.4+build.3
+loader_version=0.15.11
+fabric_version=0.97.0+1.20.4
