--- a/SMPTweaks/build.gradle
+++ b/SMPTweaks/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id("java")
-    id("io.papermc.paperweight.userdev") version "2.0.0-beta.12"
+    id("io.papermc.paperweight.userdev") version "2.0.0-beta.17"
 }
 
 sourceCompatibility = JavaVersion.VERSION_21
@@ -14,6 +14,7 @@ compileJava {
 }
 
 repositories {
+    gradlePluginPortal()
     mavenCentral()
     mavenLocal()
     maven { url "https://repo.extendedclip.com/content/repositories/placeholderapi/" }
