--- a/SMPTweaks/build.gradle
+++ b/SMPTweaks/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id("java")
-    id("io.papermc.paperweight.userdev") version "2.0.0-beta.17"
+    id("io.papermc.paperweight.userdev") version "2.0.0-beta.19"
 }
 
-sourceCompatibility = JavaVersion.VERSION_21
-targetCompatibility = JavaVersion.VERSION_21
+java.sourceCompatibility = JavaVersion.VERSION_21
+java.targetCompatibility = JavaVersion.VERSION_21
 group = project.group
 defaultTasks "rebuild"
 
@@ -48,7 +48,7 @@ clean {
     delete rootProject.buildDir
 }
 
-task rebuild {
+tasks.register('rebuild') {
     dependsOn clean
     finalizedBy build
 }
