--- a/SpawnProofer/gradle.properties
+++ b/SpawnProofer/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx1G
 # Mod Properties
 mod_version = 1.20.4
 mod_name = SpawnProofer
-maven_group = me.wobbychip.spawnproofer
+maven_group = me.serbinskis.spawnproofer
 
 # Mod Dependencies https://linkie.shedaniel.dev/
 modmenu_version=9.2.0-beta.2
